--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: dockerfile.dev
     volumes:
-      - ./:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./:/usr/src/hos-serive
+      - /usr/src/hos-serive/node_modules
     ports:
-      - "7799:7799"
+      - "1082:1082"
