--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: dockerfile.dev
     volumes:
-      - ./:/usr/src/hos-serive
-      - /usr/src/hos-serive/node_modules
+      - ./:/usr/src/hos-service
+      - /usr/src/hos-service/node_modules
     ports:
       - "1082:1082"
