Implement notices CRUD requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,16 @@ services:
       - /usr/src/hos-service/node_modules
     ports:
       - "1082:1082"
+    links:
+      - mongo-db
+    environment:
+      MONGO_HOSTNAME: mongo-db
+      MONGO_DB: hos-service
+      MONGO_PORT: 27018
+  mongo-db:
+    image: mongo
+    ports:
+      - "27018:27017"
+    container_name: mongo-db
+    volumes:
+      - ./db/:/data/db
