--- a/package.json
+++ b/package.json
@@ -7,21 +7,45 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
     "dev:docker": "docker compose up --build",
-    "test": "jest"
+    "test": "jest --coverage",
+    "test:docker": "chmod +x ./bin/test.sh && NODE_ENV=test ./bin/test.sh",
+    "lint": "node_modules/.bin/eslint ."
   },
   "keywords": [
     "docker"
   ],
   "author": "Yana Sidorova",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/tests/fixtures/setup.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
+  },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "js-yaml": "^4.1.0",
+    "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
+    "supertest": "^6.1.4",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "jest": "^27.0.6",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.4"
   }
 }
