--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       MONGO_HOSTNAME: mongo-db
       MONGO_DB: hos-service
       MONGO_PORT: 27017
+      LANG: RU
   mongo-db:
     image: mongo
     ports:
