--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     }
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "js-yaml": "^4.1.0",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
+    "socket.io": "^4.1.3",
     "supertest": "^6.1.4",
     "swagger-ui-express": "^4.1.6"
   },
