--- a/documentation/paths/claims.yaml
+++ b/documentation/paths/claims.yaml
@@ -48,8 +48,10 @@ post:
           properties:
             user_id:
               type: string
+              format: uuid
             date:
               type: string
+              format: date-time
             type:
               type: string
               enum: [morning, evening]
