--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^27.0.6",
     "nock": "^13.1.3",
     "nodemon": "^2.0.12",
-    "supertest": "^6.1.4"
+    "supertest": "^6.1.4",
+    "uuid": "^8.3.2"
   }
 }
