--- a/documentation/paths/user-claims.yaml
+++ b/documentation/paths/user-claims.yaml
@@ -2,6 +2,8 @@ get:
   summary: Get claims for one user
   tags:
     - "Users"
+  security:
+  - AccessTokenAuth: [] 
   parameters:
     - name: userId
       in: path
@@ -24,7 +26,7 @@ get:
                 items:
                   $ref: "../schemas/Claim.yaml"
     "401":
-      description: Auth required
+      description: Unauthorized
       content:
         application/json:
           schema:
