--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,8 @@ services:
       - "1082:1082"
     links:
       - mongo-db
-    environment:
-      MONGO_HOSTNAME: mongo-db
-      MONGO_DB: hos-service
-      MONGO_PORT: 27017
-      LANG: RU
+    env_file:
+     - .env
   mongo-db:
     image: mongo
     ports:
