--- a/documentation/paths/notices.yaml
+++ b/documentation/paths/notices.yaml
@@ -15,7 +15,7 @@ post:
               type: string
             description:
               type: string
-            authorized:
+            internalOnly:
               type: boolean
   responses:
     '201':
