--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
         "lines": 80,
         "statements": 80
       }
-    }
+    },
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/models/"
+    ]
   },
   "dependencies": {
     "cors": "^2.8.5",
