move urls into env

--- a/example.env
+++ b/example.env
@@ -4,4 +4,9 @@ MONGO_DB=
 LANG=EN
 
 EVENT_KEY=
-AUTH_SERVICE_URL=
+
+UI_LOCAL_URL=http://localhost:8080
+UI_PROD_URL=
+DOCKER_HOS_SERVICE_URL=
+DOCKER_AUTH_SERVICE_URL=
+AUTH_SERVICE_PROD_URL=
