--- a/example.env
+++ b/example.env
@@ -1,8 +1,14 @@
 MONGO_HOSTNAME=localhost
 MONGO_PORT=27018
-MONGO_DB=
-LANG=EN
 
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_DATABASE=
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_DATABASE=
+
+LANG=EN
 EVENT_KEY=
 
 UI_LOCAL_URL=http://localhost:8080
