--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - mongo-db
     env_file:
      - .env
+
   mongo-db:
     image: mongo
     ports:
@@ -20,4 +21,6 @@ services:
     container_name: mongo-db
     volumes:
       - ./db/:/data/db
-    command: mongod --quiet --logpath /dev/null 
+    env_file:
+      - .env
+    command: mongod --auth --quiet --logpath /dev/null 
