--- a/package.json
+++ b/package.json
@@ -31,30 +31,33 @@
     },
     "coveragePathIgnorePatterns": [
       "<rootDir>/src/models/"
-    ]
+    ],
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
-    "got": "^9.6.0",
-    "js-yaml": "^4.1.0",
-    "mongoose": "^6.0.9",
-    "morgan": "^1.10.0",
-    "socket.io": "^4.1.3",
-    "supertest": "^6.1.4",
-    "swagger-ui-express": "^4.1.6"
+    "axios": "1.4.0",
+    "cors": "2.8.5",
+    "dotenv": "10.0.0",
+    "express": "4.17.3",
+    "express-validator": "6.12.1",
+    "js-yaml": "4.1.0",
+    "mongoose": "6.0.15",
+    "morgan": "1.10.0",
+    "socket.io": "4.1.3",
+    "supertest": "6.1.4",
+    "swagger-ui-express": "4.3.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "faker": "^5.5.3",
-    "jest": "^27.0.6",
-    "nock": "^13.1.3",
-    "nodemon": "^2.0.12",
-    "supertest": "^6.1.4",
-    "uuid": "^8.3.2"
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "2.23.4",
+    "faker": "5.5.3",
+    "jest": "27.0.6",
+    "nock": "13.1.3",
+    "nodemon": "2.0.22",
+    "supertest": "6.1.4",
+    "uuid": "8.3.2"
   }
 }
