--- a/documentation/paths/notices.yaml
+++ b/documentation/paths/notices.yaml
@@ -17,6 +17,8 @@ post:
               type: string
             internalOnly:
               type: boolean
+            animal_id:
+              type: string
   responses:
     '201':
       description: Notice created successfully
